Dark mode registration confirmation color fix - reverted

--- a/app/cells/folio/addresses/fields/fields.sass
+++ b/app/cells/folio/addresses/fields/fields.sass
@@ -1,8 +1,8 @@
 $folio-addresses-fields-max-width: 645px !default
 $folio-addresses-fields-margin: 1.5 * $grid-gutter-width 0 !default
 $folio-addresses-fields-padding: $grid-gutter-width !default
-$folio-addresses-fields-background: $shade-100 !default
-$folio-addresses-fields-nested-background: $shade-light-contrast !default
+$folio-addresses-fields-background: $light-gray !default
+$folio-addresses-fields-nested-background: $white !default
 $folio-addresses-fields-nested-padding-x: $grid-gutter-half !default
 $folio-addresses-fields-nested-padding-y: 9px !default
 
